--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -1,6 +1,7 @@
 .Navbar {
     display: flex;
     width: 100%;
+    height: 78px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
