--- a/src/components/Products/styles.css
+++ b/src/components/Products/styles.css
@@ -4,7 +4,9 @@
     display: flex;
     flex-direction: column;
     /* align-items: center; */
+    align-items: unset;
     justify-content: flex-start;
+    
 }
 .Products_CathegoryName {
     font-family: 'Raleway';
@@ -21,7 +23,7 @@
     height: 980px;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     flex-wrap: wrap;
 }
