--- a/src/components/Products/Product/styles.css
+++ b/src/components/Products/Product/styles.css
@@ -3,3 +3,13 @@
     height: 412px;
     border: 1px solid black;
 }
+.noStore {
+    opacity: 0.5;
+    background-color: aqua;
+    border: 1px solid red;
+}
+.ProductBuyButton {
+    width: 50px;
+    height: 50px;
+    background-color: green;
+}
