--- a/src/components/ProductPage/styles.css
+++ b/src/components/ProductPage/styles.css
@@ -2,22 +2,44 @@
     width: 1200px;
     height: 595px;
     border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
 }
 .ProductPage_main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .ProductPage_imgs{
+    width: 80px;
+    height: 505px;
+
+    margin-left: 100px;
+
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-bottom: 40px;
+    margin-bottom: 40px;   
+}
+.ProductPage_imgs>img {
+    width: 80px;
+    height: 80px;    
 }
 .ProductPage_main__info {
     width: 292px;
     height: 595px;    
+}
+.ProductPage_main__img {
+    width: 610px;
+    height: 511px;
+    border: 1px solid black;
+    margin-right: 100px;
 }
 .ProductPage_main__sizes, .ProductPage_main__colors {
     width: 288px;
