--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -30,3 +30,8 @@
     align-items: center;
     justify-content: space-between;
 }
+.NavBar_logo{
+    width: 41px;
+    height: 41px;
+    background-image: url("../../assets/imgs/logo_transparent.svg");
+}
