--- a/src/components/Products/Product/styles.css
+++ b/src/components/Products/Product/styles.css
@@ -1,15 +1,70 @@
-.Product{
-    width: 354px;
-    height: 412px;
+.ProductCard{
+    width: 366px;
+    height: 444px;
     border: 1px solid black;
+    text-align: left;    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 10px;
+}
+.ProductCard p {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 100%;
+    /* identical to box height, or 29px */
+
+    display: flex;
+    align-items: center;
+
+    /* --c-black */
+
+    color: #1D1F22;
+    margin-left: 10px;
+
 }
 .noStore {
     opacity: 0.5;
     background-color: aqua;
     border: 1px solid red;
 }
-.ProductBuyButton {
+.ProductCardBuyButton {
     width: 50px;
-    height: 50px;
+    height: 170px;
     background-color: green;
+    display: flo; 
+}
+.ProductCard_img {
+    width: 100%;
+    height: 370px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ProductCard_img>img{
+    width: 330px;
+    height: 330px;
+    background-size: cover;
+}
+.ProductCard_title{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.ProductCard_price{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    /* identical to box height, or 29px */
+
+    text-align: right;
+
+    /* --c-black */
+
+    color: #1D1F22;
 }
