--- a/src/components/NavBar/BasketCurrency/styles.css
+++ b/src/components/NavBar/BasketCurrency/styles.css
@@ -1,3 +1,23 @@
 .BasketCurrency {
-    width: 33px;
+    width: 153px;
+}
+
+.NavBar_Currency {
+    border: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 160%;
+    /* identical to box height, or 29px */
+
+    display: flex;
+    align-items: flex-end;
+
+    /* --c-black */
+
+    color: #1D1F22;
+}
+option {
+    border: none;
 }
