--- a/src/components/Products/styles.css
+++ b/src/components/Products/styles.css
@@ -27,3 +27,14 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.showMiniBasket {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    background-color: lightblue;
+}
+.hideOnMiniBasket {
+   opacity: 0.3;
+}
