--- a/src/components/Products/CartMini/styles.css
+++ b/src/components/Products/CartMini/styles.css
@@ -9,6 +9,10 @@
     position: fixed;    
     top: 80px;
     left: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 .CartMini_hidden {
     display: none;
