--- a/src/components/Products/Product/styles.css
+++ b/src/components/Products/Product/styles.css
@@ -32,10 +32,21 @@
     border: 1px solid red;
 }
 .ProductCardBuyButton {
-    width: 50px;
-    height: 170px;
-    background-color: green;
-    display: flo; 
+    width: 52px;
+    height: 52px;    
+    background-color: #5ECE7B;
+    position: relative;
+    display: block; 
+
+    border-radius: 50%;
+
+    left: 70%;
+    top: -30%;        
+
+}
+.ProductCardBuyButton>img{
+    width: 52px;
+    height: 52px;    
 }
 .ProductCard_img {
     width: 100%;
