--- a/src/components/Products/Product/styles.css
+++ b/src/components/Products/Product/styles.css
@@ -1,35 +1,30 @@
+@font-face {
+    font-family: "Raleway";
+    src: url("../../../assets/fonts/Raleway-Regular.ttf");
+}
 .ProductCard{
     width: 366px;
     height: 444px;
-    border: 1px solid black;
+    box-shadow: 0 0 5px 2px lightblue;
     text-align: left;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+.ProductCard_wrapper{
+    width: 326px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
     padding: 10px;
-}
-.ProductCard p {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 100%;
-    /* identical to box height, or 29px */
-
-    display: flex;
-    align-items: center;
-
-    /* --c-black */
-
-    color: #1D1F22;
-    margin-left: 10px;
-
+    
 }
 .noStore {
-    opacity: 0.5;
-    background-color: aqua;
-    border: 1px solid red;
+    opacity: 0.3;
 }
 .ProductCardBuyButton {
     width: 52px;
@@ -68,14 +63,38 @@
 .ProductCard_price{
     font-family: 'Raleway';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 18px;
-    line-height: 100%;
-    /* identical to box height, or 29px */
-
+    line-height: 160%;
+    
     text-align: right;
-
+    
     /* --c-black */
-
+    
     color: #1D1F22;
+}
+.ProductCard_overlay {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 444px;
+    top: -70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+}   
+.ProductCard_overlay>p{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 160%;
+    /* identical to box height, or 38px */
+
+    display: flex;
+    align-items: center;
+
+    color: #8D8F9A;
+
 }
