--- a/src/components/Products/CartMini/styles.css
+++ b/src/components/Products/CartMini/styles.css
@@ -1,10 +1,11 @@
 .CartMini {
     position: absolute;
     width: 325px;
-    height: 600px;
+    /* height: 600px; */
     /* height: 677px; */
     background-color: #FFF;
-    border: 1px solid black;
+
+    box-shadow: 0 0 1px 1px lightblue;
 
     position: fixed;    
     top: 80px;
@@ -12,8 +13,57 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
 }
 .CartMini_hidden {
     display: none;
+}
+.CartMini_Wrapper {
+    width: 293px;
+}
+.CartMini_GUI {
+    width: 293px;
+    height: 45px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between; 
+}
+.CartMini_GUI>p{
+    width: 140px;
+    height: 45px;
+    line-height: 45px;
+}
+.CartMini_GUI>p:hover{
+    background: #5ECE7B;
+}
+.CartMini_GUI>div>p {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 32px;
+
+    background: #FFFFFF;
+    border: 1px solid #1D1F22;
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 120%;
+    /* identical to box height, or 17px */
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+
+    color: #1D1F22;
+
+    word-wrap: normal;
 }
