--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -14,15 +14,25 @@
     justify-content: space-between;
 }
 .NavBar_Cathegories li {
+    width: 70px;
+    text-align: center;
     text-decoration: none;
     text-transform: uppercase;
     list-style: none;
     font-family: Raleway;
     font-style: "bold";
     font-size: 16px;
-    line-height: 19.2px;    
+    line-height: 40px;    
     text-align: center;
+    padding-top: 40px;
+    padding-bottom: 20px;
+
 }    
+.navBarSelectedCathegory{
+    border-bottom: 3px solid #5ECE7B;
+    color: #5ECE7B;
+
+}
 .NavBar_GUI {
     width: 80px;
     display: flex;
