--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -5,6 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 15px;
 }
 .NavBar_Cathegories {
     width: 202px;
