--- a/src/components/NavBar/BasketCurrency/styles.css
+++ b/src/components/NavBar/BasketCurrency/styles.css
@@ -7,6 +7,10 @@
 }
 
 .NavBar_Currency {  
+    display: block;
+    position: relative;
+    top: 1px;
+    left: -10px;
     border: none;
     font-family: 'Raleway';
     font-style: normal;
@@ -46,7 +50,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.NavBar_Currency p {
+.NavBar_Currency>p {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 500;
