--- a/src/components/NavBar/BasketCurrency/styles.css
+++ b/src/components/NavBar/BasketCurrency/styles.css
@@ -7,10 +7,10 @@
 }
 
 .NavBar_Currency {  
-    display: block;
-    position: relative;
-    top: 1px;
-    left: -10px;
+    display: inline;
+    position: relative;    
+    top: 100px;
+    left: -80px;
     border: none;
     font-family: 'Raleway';
     font-style: normal;
@@ -22,8 +22,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding-top: 100px;
+    justify-content: space-between; 
 }
 .basketCurrencyDisable {
     display: none;
