--- a/src/components/Products/Product/styles.css
+++ b/src/components/Products/Product/styles.css
@@ -5,14 +5,19 @@
 .ProductCard{
     width: 366px;
     height: 444px;
-    box-shadow: 0 0 5px 2px lightblue;
+    box-shadow: 0 0 1px 1px lightcyan;
     text-align: left;    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
+    margin-right: 75px;
 }
+.ProductCard:hover {
+    box-shadow: 0 0 5px 2px lightblue;
+}
+
 .ProductCard_wrapper{
     width: 326px;
     height: 100%;
@@ -27,6 +32,7 @@
     opacity: 0.3;
 }
 .ProductCardBuyButton {
+    opacity: 0;
     width: 52px;
     height: 52px;    
     background-color: #5ECE7B;
@@ -36,12 +42,17 @@
     border-radius: 50%;
 
     left: 70%;
-    top: -30%;        
+    top: -30%;       
 
+}
+.ProductCard:hover .ProductCardBuyButton {
+    opacity: 1;
 }
 .ProductCardBuyButton>img{
     width: 52px;
     height: 52px;    
+    transform: scale(0.65);
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(114deg) brightness(101%) contrast(102%);
 }
 .ProductCard_img {
     width: 100%;
