--- a/src/components/Products/styles.css
+++ b/src/components/Products/styles.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: start;
     flex-wrap: wrap;
 }
 .showMiniBasket {
